[gd_scene load_steps=9 format=2]

[ext_resource path="res://scene/buildings/castle/castle.gd" type="Script" id=1]
[ext_resource path="res://scene/buildings/castle/wall.png" type="Texture" id=2]
[ext_resource path="res://scene/buildings/castle/tower.png" type="Texture" id=3]
[ext_resource path="res://assets/flag/flag.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/buildings/castle/floor.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/message-3d/message_3d.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/ui/bar-3d/hp_bar_3d.tscn" type="PackedScene" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 4.12259, 0.84971, 4.37919 )

[node name="castle" type="StaticBody"]
collision_layer = 0
collision_mask = 0
input_ray_pickable = false
script = ExtResource( 1 )

[node name="pivot" type="Spatial" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.5, 0 )

[node name="wall_1" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.445189, 0, 0.767853 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="wall_2" type="Sprite3D" parent="pivot"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.738753, 0, 0.470714 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="wall_3" type="Sprite3D" parent="pivot"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.7428, 0, -0.487068 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="wall_4" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.442199, 0, -0.759835 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="wall_5" type="Sprite3D" parent="pivot"]
transform = Transform( -0.999978, 0, 0.00668441, 0, 1, 0, -0.00668441, 0, -0.999978, -0.401105, 0, -0.755068 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="wall_6" type="Sprite3D" parent="pivot"]
transform = Transform( -0.00668454, 0, -0.999978, 0, 1, 0, 0.999978, 0, -0.00668454, -0.696785, 0, -0.439525 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="wall_7" type="Sprite3D" parent="pivot"]
transform = Transform( -0.00668454, 0, -0.999978, 0, 1, 0, 0.999978, 0, -0.00668454, -0.707234, 0, 0.46126 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="wall_8" type="Sprite3D" parent="pivot"]
transform = Transform( -0.999978, 0, 0.00668441, 0, 1, 0, -0.00668441, 0, -0.999978, -0.408464, 0, 0.765725 )
alpha_cut = 2
texture = ExtResource( 2 )

[node name="gate_1" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 0.808906, 0, 0, 0, 1, 0.0171371, -0.039764, 0.80351 )
alpha_cut = 2
texture = ExtResource( 5 )

[node name="gate_2" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 0.808906, 0, 0, 0, 1, 0.0171371, -0.039764, -0.785455 )
alpha_cut = 2
texture = ExtResource( 5 )

[node name="gate_3" type="Sprite3D" parent="pivot"]
transform = Transform( -4.37114e-08, 0, 1, 0, 0.808906, 0, -1, 0, -4.37114e-08, -0.743674, -0.039764, 0.0351216 )
alpha_cut = 2
texture = ExtResource( 5 )

[node name="gate_4" type="Sprite3D" parent="pivot"]
transform = Transform( -4.37114e-08, 0, 1, 0, 0.808906, 0, -1, 0, -4.37114e-08, 0.771716, -0.039764, -0.00784492 )
alpha_cut = 2
texture = ExtResource( 5 )

[node name="tower_1" type="Sprite3D" parent="pivot"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.271888, 0.189463, -0.00784492 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="tower_2" type="Sprite3D" parent="pivot"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.302196, 0.189463, -0.00784492 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="tower_3" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0187773, 0.189463, 0.292994 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="tower_4" type="Sprite3D" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0187773, 0.189463, -0.269555 )
alpha_cut = 2
texture = ExtResource( 3 )

[node name="floor" type="Sprite3D" parent="pivot"]
transform = Transform( 0.936435, 0, 0, 0, -4.02315e-08, -0.999483, 0, 0.920389, -4.36888e-08, 0.0187773, 0.54998, 0.0133343 )
alpha_cut = 2
texture = ExtResource( 5 )

[node name="floor2" type="Sprite3D" parent="pivot"]
transform = Transform( 0.936435, 0, 0, 0, -4.02315e-08, -0.999483, 0, 0.920389, -4.36888e-08, 0.0187773, 0.231452, 0.0133343 )
alpha_cut = 2
texture = ExtResource( 5 )

[node name="flag" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.71476, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.034, 0, 0.003 )
shape = SubResource( 1 )
disabled = true

[node name="hpBar" parent="." instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, -2 )

[node name="message_3d" parent="." instance=ExtResource( 6 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )

[node name="coin_gain_timer" type="Timer" parent="."]
wait_time = 5.0

[node name="capture_reset_timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
unit_db = 10.0
unit_size = 10.0
bus = "sfx"

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
aabb = AABB( -4.28562, -1, -4.39329, 8.57124, 2, 8.78659 )

[connection signal="timeout" from="coin_gain_timer" to="." method="_on_coin_gain_timer_timeout"]
[connection signal="timeout" from="capture_reset_timer" to="." method="_on_capture_reset_timer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
